<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.macticity.fragment.Module_fragment_login_verify"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green">

            <RelativeLayout
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <ImageView
                    android:id="@+id/iv_back"
                    android:background="@drawable/module_login_back_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_change_password_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </FrameLayout>

        <LinearLayout
            android:background="@color/background"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textColor="@color/loginword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_writeandcote_activity" />

                <TextView
                    android:id="@+id/tv_check"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/loginword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textColor="@color/loginword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_number_activity" />

                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_marginLeft="20dp"
                        android:hint="@string/app_write_phone_activity"
                        android:layout_marginRight="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textColor="@color/loginword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_cote_activity" />

                    <EditText
                        android:id="@+id/et_yanz"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/app_writecote_activity"
                        android:layout_marginRight="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textColor="@color/loginword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_password_activity" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_marginLeft="17dp"
                        android:hint="@string/app_write_new_activity"
                        android:layout_marginRight="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_mobile_code"
                android:text="@string/app_send_cote_activity"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/module_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>
</layout>