<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.macticity.fragment.Module_fragment_login_verify"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green">

            <RelativeLayout
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <ImageView
                    android:id="@+id/iv_back"
                    android:background="@drawable/module_login_back_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_centerHorizontal="true"
                    android:text="手机登录"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </FrameLayout>

        <LinearLayout
            android:background="@color/background"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textColor="@color/loginword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_login_activity" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:textColor="@color/loginword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_logining_activity"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_phonenumber_activity" />

                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/app_write_phone_activity"
                        android:layout_marginRight="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_password_activity"/>
                    <EditText
                        android:hint="@string/app_writepassword_activity"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="20dp"
                        android:id="@+id/et_mobile_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btn_mobile_login"
                android:text="@string/app_login_main_activity"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/module_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="15dp"
                android:id="@+id/tv_login"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>
</layout>