<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <RelativeLayout
        android:background="@color/milkwhit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    <TextView
        android:id="@+id/tv_now_songs"
        android:layout_marginTop="20dp"
        android:text="@string/app_playing_song"
        android:textColor="#66CDAA"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/app_playing_song_name"
            android:id="@+id/tv_songs_name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="100dp"
            android:layout_below="@+id/tv_now_songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/app_playing_singer"
            android:layout_marginLeft="150dp"
            android:layout_toRightOf="@+id/tv_songs_name"
            android:layout_below="@+id/tv_now_songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tv_songs_name"
            android:id="@+id/rv_songs"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
</layout>