<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/app_hai_songs"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="center"
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_sleep_better" />

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/iv_disk"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/demo_music" />

        <TextView
            android:id="@+id/tv_lyric_previous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="---"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_lyric_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_wake_up"
            android:gravity="center"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_lyric_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="---"
            android:gravity="center" />


    </LinearLayout>
</layout>