<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.macticity.fragment.Module_fragment_login_main" />
    </data>
    <com.example.macticity.view.WaveRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainback"
        >
        <ImageView
            android:layout_marginTop="150dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/module_login_iconic" />
        <LinearLayout
            android:id="@+id/ll_Login_Iconic"
            android:layout_marginTop="500dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/tv_phone"
                    android:textSize="25dp"
                    android:textColor="@color/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/tv_rewrite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/moudle_login_correction" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_marginTop="20dp"
                android:background="@drawable/module_login_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/app_main_btn_activity"
                android:textColor="@color/nec_login_red"/>
        </LinearLayout>
        <LinearLayout
            android:id="@id/ll_Login_icons"
            android:layout_marginTop="30dp"
            android:layout_below="@id/ll_Login_Iconic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            >
            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:background="@drawable/module_login_wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:background="@drawable/module_login_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:background="@drawable/module_login_sina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:background="@drawable/moudle_login_neteasecloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_below="@+id/ll_Login_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <CheckBox
                android:id="@+id/cb_btn"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/nec_login_red"
                android:text="同意"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:textColor="@color/nec_login_red"
                android:text="@string/app_user_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/nec_login_red"
                android:text="@string/app_private_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/nec_login_red"
                android:text="@string/app_children_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </com.example.macticity.view.WaveRelativeLayout>
</layout>